[package]
name = "memory_utils"
version = "0.1.0"
edition = "2021"
authors = ["Penguin"]
description = "A memory reading/writing utility using Windows API"
license = "MIT"
repository = "https://github.com/penguin-cmyk/memory_utils"
keywords = ["memory", "windows", "processs", "cheat", "debug"]
categories = ["api-bindings", "os::windows-apis"]
readme = "README.md"
documentation = ""
[dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "memoryapi", "handleapi", "tlhelp32", "winnt", "minwindef", "basetsd"] }
