[package]
name = "memory_utils"
version = "0.1.14"
edition = "2021"
authors = ["Penguin"]
description = "A memory reading/writing utility using Windows API"
license = "MIT"
repository = "https://github.com/penguin-cmyk/memory_utils"
homepage = "https://github.com/penguin-cmyk/memory_utils"
keywords = ["memory", "windows", "processs", "cheat", "debug"]
categories = ["api-bindings", "os::windows-apis"]
readme = "README.md"
documentation = "https://docs.rs/memory_utils"
[dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "memoryapi", "handleapi", "tlhelp32", "winnt", "minwindef", "basetsd"] }
